resolved issue with spacing after adding the home lists, removed underline from links on all pages including the homepage. Made the home list images smaller along with the other route link lists.

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,49 @@ li {
   width: 100%;
   height: 100%;
 }
+
+.listImg{
+  width: auto;
+  height: 75px;
+
+}
+
+
+.gameArt{
+  width: auto;
+  height: 95px;
+}
+
+.art{
+  width: auto;
+  height: 95px;
+}
+
+.list ul{
+  margin: 0;
+  padding: 0;
+}
+
+.list li{
+  width: 300px;
+  margin-bottom: 20px;
+}
+
+.list img{
+  margin-right: 2rem;
+}
+
+
+
+.list a{
+  text-decoration: none;
+}
+
+.dRow a{
+  text-decoration: none;
+}
+
+
 /* .gamedetail {
 float:left;
 } */
